--- a/styles/global.css
+++ b/styles/global.css
@@ -45,93 +45,6 @@ footer {
     width: 20px;
     height: 20px; }
 
-.divFormulario {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  background-color: #0f0f0e; }
-
-.formu {
-  padding: 3rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  grid-area: 1/1;
-  border-right: 1px solid #4CFDB3; }
-  .formu .formulario {
-    color: #4CFDB3;
-    font-weight: bold;
-    display: grid;
-    grid-template-columns: 1fr;
-    justify-items: center;
-    background-image: linear-gradient(271deg, #000000, #3d3535); }
-
-.tituloUs {
-  height: 100vh;
-  width: 100%;
-  background-image: url(../imagenes/splash.gif);
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position-x: center;
-  background-color: black;
-  display: flex;
-  justify-content: center;
-  align-items: center; }
-  .tituloUs h1 {
-    font-size: calc(1.375rem + 1.5vw);
-    padding: 10px;
-    color: #4cfbd3; }
-
-.subTituloUs {
-  display: flex;
-  border-bottom: groove 3px #257D59;
-  padding: 50px;
-  margin: 40px;
-  flex-direction: column;
-  align-items: center; }
-  .subTituloUs p {
-    margin-top: 18px; }
-
-.padreAboutUs {
-  display: grid;
-  grid-template-columns: 1fr 1fr; }
-
-.aboutUs {
-  margin: 100px;
-  display: block;
-  position: relative;
-  top: 7rem;
-  grid-area: 1/1; }
-  .aboutUs h2 {
-    margin-bottom: 30px;
-    margin-top: 30px; }
-
-.imagenAboutUs {
-  position: static;
-  margin: 100px;
-  height: fit-content;
-  left: 100px;
-  grid-area: 1/2;
-  transition: transform 2s; }
-
-.imagenAboutUs:hover {
-  transform: scale(1.1); }
-
-.padreAboutUsDos {
-  background-image: url(../imagenes/us.png);
-  width: 100%;
-  background-repeat: no-repeat;
-  background-size: cover;
-  margin-top: 50px;
-  margin-bottom: 50px;
-  height: 70vh; }
-  .padreAboutUsDos h2 {
-    color: whitesmoke;
-    font-weight: bold;
-    font-size: 32px;
-    text-align: center;
-    padding-top: 30vh;
-    padding-left: 78px; }
-
 /*MAIN - PAGINA DE MARCAS*/
 .encabezados {
   margin-top: 50px;
@@ -224,7 +137,8 @@ footer {
       font-size: 1rem; }
 
 .videoPatente {
-  display: flex; }
+  display: flex;
+  margin-top: 100px; }
 
 .divPatente {
   display: flex;
@@ -245,6 +159,30 @@ footer {
   grid-gap: 24px;
   margin: 3rem;
   width: 100%; }
+
+.logo {
+  text-align: center;
+  font-size: 3em;
+  color: #4cfdb3; }
+
+.infoForm {
+  box-shadow: 0 0 20px 0 rgba(255, 255, 255, 0.3); }
+
+.contactForm {
+  font-weight: bold;
+  margin: 0;
+  padding: 1em; }
+
+.infoContact {
+  color: black;
+  margin: 0;
+  padding: 1em;
+  background-color: #00FC93;
+  font-weight: bold;
+  width: fit-content;
+  padding: 1em; }
+  .infoContact ul li {
+    display: block; }
 
 /*HEADER*/
 header {
