--- a/scss/_contactus.scss
+++ b/scss/_contactus.scss
@@ -1,29 +1,91 @@
-.logo{
+/*---CONTACT US---*/
+$tablet:768px;
+$laptop:1024px;
+
+.logo {
     text-align: center;
     font-size: 3em;
-    color: #4cfdb3; ;
+    color: #4cfdb3;
+    margin-top: 100px;
+    margin-bottom: 100px;
 }
-.infoForm{
+  
+.formulario1 {
+    box-shadow: 0 0 20px 0 rgba(255, 255, 255, 0.3);
+    margin-bottom: 100% }
  
-    box-shadow: 0 0 20px 0 rgba(255, 255, 255, .3);
-}
-.contactForm{
+@media (min-width: $tablet){
+        .formulario1{
+            display: grid;
+            grid-template-columns: 2fr 1fr;
+            padding: 2em;
+        }
+        .infoContact{
+            padding: 1em;
+            text-align: left;
+        }
+}   
+.datos {
     font-weight: bold;
     margin: 0;
     padding: 1em;
+    h3{
+        border-bottom: 1px solid #4cfdb3;
+    } 
+}
+form{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    p{
+        margin: 0;
+        padding: 1em;
+    }
 }
 
-.infoContact{
+.estiloDeForm{  
+        width: 100%;
+        padding: .7em;
+        border: none;
+        background: none;
+        outline: none;
+        border-bottom: 1px solid #4cfdb3;
+}
+
+.block{
+    grid-column: 1/3;
+    text-transform: uppercase;
+    font-weight: bold;
+    padding: 1em;
+    margin: 10px;
+}
+button{
+    background-color: #4cfdb3ed;
+    color: black;
+    width: 100%;
+    
+}
+.datos form button:hover,
+.datos form button:focus{
+    background-color:#257D59;
+    color: whitesmoke;
+    transition:1s ;
+}
+    
+.infoContact {
+    text-align: center;
     color: black;
     margin: 0;
     padding: 1em;
     background-color: #00FC93;
     font-weight: bold;
-    width: fit-content;
+    width: 100%;
     padding: 1em; 
-    ul{
-        li{
-            display: block;
+        h3{
+            font-weight: bold;
+            
         }
-    }
-}
+        ul li {
+            display: block;
+            margin: 8px;
+        }
+}    
