--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,8 +3,7 @@
 @import "marcas";
 @import "patentes";
 @import "contactus";
-
-
+@import "modelosydi";
 
 
 $tablet:768px;
@@ -80,7 +79,7 @@ header{
 /*MAIN - PAGINA DE INICIO*/
 main{
         .divPortada{
-            background-image: url(../imagenes/oraculo.gif);
+            background-image: url(../imagenes/splash.gif);
             background-repeat: no-repeat;
             background-size:cover;
             margin-top: 50px;
@@ -142,52 +141,15 @@ main{
     }
    
 }
-    @media screen and (min-width:$tablet) {
-        .padreInicio{
-            grid-template-columns: 1fr 1fr;
-        }
-    }
-    @media screen and (min-width:$laptop) {
-        .padreInicio{
-            grid-template-columns: 1fr 1fr 1fr 1fr;
-        }
-    }
-
-/*MAIN - PAGINA DE MODELOS*/
-.padreModelos{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    margin: 100px;
-    background-image: url(/imagenes/modelosydiseños.jpg);
-    background-repeat: no-repeat;
-    background-size:cover;
-    margin-top: 50px;
-    height: 50vh;
-}
-
-/*MAIN - PAGINA DE DISEÑO*/
-.acordeon{
-    width: 90%;
-    max-width: 120em;
-    background-color: red;
-    padding: 2em; 
-    .bloque{
-        background-color: blue;
-        margin: 0 0 1em;
-        padding: 1em;
-        margin-top: 3rem;
-
+@media screen and (min-width:$tablet) {
+    .padreInicio{
+        grid-template-columns: 1fr 1fr;
     }
 }
-.acordeon{
-    .h2{
-        margin: 0 0 1em;
-        padding: 1em;
+@media screen and (min-width:$laptop) {
+    .padreInicio{
+        grid-template-columns: 1fr 1fr 1fr 1fr;
     }
-    .contenido{
-        background-color: orange;
-        height: 0;
-        padding: 0em;
-        overflow: hidden;
-    }
-}
+}   
+
+
