--- a/styles/global.css
+++ b/styles/global.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 * {
   margin: 0%;
   box-sizing: border-box; }
@@ -20,12 +19,108 @@ li {
   li:hover ul {
     display: block; }
 
+.content {
+  margin-top: 50px;
+  height: 100vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center; }
+  .content h1 {
+    font-weight: bold;
+    padding-top: 1rem;
+    padding-left: 78px;
+    font-size: calc(1.375rem + 1.5vw);
+    padding: 10px;
+    position: relative;
+    width: auto;
+    height: auto;
+    text-align: center;
+    display: inline-block;
+    color: #4CFDB3; }
+
+h1:after {
+  content: "";
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  width: 0;
+  height: 0;
+  background: transparent;
+  border: 2px solid transparent; }
+
+h1:hover:after {
+  animation: animate2 1s linear forwards; }
+
+@keyframes animate2 {
+  0% {
+    width: 0;
+    height: 0;
+    border-top-color: transparent;
+    border-right-color: transparent;
+    border-bottom-color: transparent;
+    border-left-color: #00fc93; }
+  50% {
+    width: 0;
+    height: 100%;
+    border-top-color: transparent;
+    border-right-color: transparent;
+    border-bottom-color: #00fc93;
+    border-left-color: #00fc93; }
+  100% {
+    width: 100%;
+    height: 100%;
+    border-top-color: transparent;
+    border-right-color: transparent;
+    border-bottom-color: #00fc93;
+    border-left-color: #00fc93; } }
+
+h1:before {
+  content: "";
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  width: 0;
+  height: 0;
+  background: transparent;
+  border: 2px solid transparent; }
+
+h1:hover:before {
+  animation: animate 1s linear forwards; }
+
+@keyframes animate {
+  0% {
+    width: 0;
+    height: 0;
+    border-top-color: #00fc93;
+    border-right-color: transparent;
+    border-bottom-color: transparent;
+    border-left-color: transparent; }
+  50% {
+    width: 100%;
+    height: 0;
+    border-top-color: #00fc93;
+    border-right-color: #00fc93;
+    border-bottom-color: transparent;
+    border-left-color: transparent; }
+  100% {
+    width: 100%;
+    height: 100%;
+    border-top-color: #00fc93;
+    border-right-color: #00fc93;
+    border-bottom-color: transparent;
+    border-left-color: transparent; } }
+
 .parrafos {
   color: whitesmoke; }
 
 h2 {
   color: #4CFDB3;
   font-style: italic; }
+
+@media (min-width: 1024px) {
+  header main {
+    padding: 0 4rem; } }
 
 footer {
   display: grid;
@@ -46,24 +141,6 @@ footer {
     height: 20px; }
 
 /*MAIN - PAGINA DE MARCAS*/
-.encabezados {
-  margin-top: 50px;
-  height: 100vh;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center; }
-  .encabezados h1 {
-    font-weight: bold;
-    padding-top: 1rem;
-    padding-left: 78px;
-    text-align: center;
-    font-size: calc(1.375rem + 1.5vw);
-    padding: 10px;
-    color: #4cfbd3;
-    width: fit-content;
-    border: 3px solid #4CFDB3; }
-
 .info {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -136,10 +213,6 @@ footer {
       color: whitesmoke;
       font-size: 1rem; }
 
-.videoPatente {
-  display: flex;
-  margin-top: 100px; }
-
 .divPatente {
   display: flex;
   margin-left: 1%;
@@ -160,30 +233,83 @@ footer {
   margin: 3rem;
   width: 100%; }
 
+/*---CONTACT US---*/
 .logo {
   text-align: center;
   font-size: 3em;
-  color: #4cfdb3; }
+  color: #4cfdb3;
+  margin-top: 100px;
+  margin-bottom: 100px; }
 
-.infoForm {
-  box-shadow: 0 0 20px 0 rgba(255, 255, 255, 0.3); }
+.formulario1 {
+  box-shadow: 0 0 20px 0 rgba(255, 255, 255, 0.3);
+  margin-bottom: 100%; }
 
-.contactForm {
+@media (min-width: 768px) {
+  .formulario1 {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    padding: 2em; }
+  .infoContact {
+    padding: 1em;
+    text-align: left; } }
+
+.datos {
   font-weight: bold;
   margin: 0;
   padding: 1em; }
+  .datos h3 {
+    border-bottom: 1px solid #4cfdb3; }
+
+form {
+  display: grid;
+  grid-template-columns: 1fr 1fr; }
+  form p {
+    margin: 0;
+    padding: 1em; }
+
+.estiloDeForm {
+  width: 100%;
+  padding: .7em;
+  border: none;
+  background: none;
+  outline: none;
+  border-bottom: 1px solid #4cfdb3; }
+
+.block {
+  grid-column: 1/3;
+  text-transform: uppercase;
+  font-weight: bold;
+  padding: 1em;
+  margin: 10px; }
+
+button {
+  background-color: #4cfdb3ed;
+  color: black;
+  width: 100%; }
+
+.datos form button:hover,
+.datos form button:focus {
+  background-color: #257D59;
+  color: whitesmoke;
+  transition: 1s; }
 
 .infoContact {
+  text-align: center;
   color: black;
   margin: 0;
   padding: 1em;
   background-color: #00FC93;
   font-weight: bold;
-  width: fit-content;
+  width: 100%;
   padding: 1em; }
+  .infoContact h3 {
+    font-weight: bold; }
   .infoContact ul li {
-    display: block; }
+    display: block;
+    margin: 8px; }
 
+/*MAIN - PAGINA DE MODELOS*/
 /*HEADER*/
 header {
   background-color: #0D0D0D;
@@ -242,7 +368,7 @@ header {
 
 /*MAIN - PAGINA DE INICIO*/
 main .divPortada {
-  background-image: url(../imagenes/oraculo.gif);
+  background-image: url(../imagenes/splash.gif);
   background-repeat: no-repeat;
   background-size: cover;
   margin-top: 50px;
@@ -301,36 +427,3 @@ main .divPortada {
 @media screen and (min-width: 1024px) {
   .padreInicio {
     grid-template-columns: 1fr 1fr 1fr 1fr; } }
-
-/*MAIN - PAGINA DE MODELOS*/
-.padreModelos {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  margin: 100px;
-  background-image: url(/imagenes/modelosydiseños.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  margin-top: 50px;
-  height: 50vh; }
-
-/*MAIN - PAGINA DE DISEÑO*/
-.acordeon {
-  width: 90%;
-  max-width: 120em;
-  background-color: red;
-  padding: 2em; }
-  .acordeon .bloque {
-    background-color: blue;
-    margin: 0 0 1em;
-    padding: 1em;
-    margin-top: 3rem; }
-
-.acordeon .h2 {
-  margin: 0 0 1em;
-  padding: 1em; }
-
-.acordeon .contenido {
-  background-color: orange;
-  height: 0;
-  padding: 0em;
-  overflow: hidden; }
