--- a/styles/global.css
+++ b/styles/global.css
@@ -123,22 +123,31 @@ h2 {
     padding: 0 4rem; } }
 
 footer {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
   width: 100%;
   background-color: #00C976;
-  background-image: linear-gradient(to left, #4CFDB3, #00FC93, #257D59); }
-  footer .listFooter {
-    display: flex;
-    padding-right: 15%;
-    line-height: 40px; }
+  background-image: linear-gradient(to left, #4CFDB3, #00FC93, #257D59);
+  display: grid;
+  grid-template-columns: 1fr 1fr; }
+  footer div p {
+    color: black;
+    width: max-content;
+    font-size: 18px;
+    font-weight: bold; }
+
+.textFooter {
+  display: inline-block;
+  padding: 5px;
+  text-align: center;
+  font-weight: bold;
+  font-size: x-large;
+  border-right: 1px solid black; }
 
 .imgFooter {
-  grid-area: 1/2; }
-  .imgFooter .logoFooter {
-    display: inline-block;
-    width: 20px;
-    height: 20px; }
+  padding: 5px;
+  text-align: center; }
+  .imgFooter img {
+    height: 35px;
+    width: 35px; }
 
 /*MAIN - PAGINA DE MARCAS*/
 .info {
