--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -28,7 +28,7 @@ li{
 }
 .content{
     margin-top: 50px;
-    height: 100vh;
+    height: 50vh;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -132,6 +132,12 @@ h2{
     color: #4CFDB3;
     font-style: italic;   
 }   
+.info .infoPatentes{
+    h2{
+        animation-duration: 6s;
+        animation-delay: 0.2s;
+        }
+}
 
 @media (min-width: $laptop){
     header main{
