--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,5 @@
 @import "base";
+@import "header";
 @import "footer";
 @import "marcas";
 @import "patentes";
@@ -9,103 +10,56 @@
 $tablet:768px;
 $laptop:1024px;
 
-/*HEADER*/
-header{
-    background-color:#0D0D0D;
-    list-style-type: lower-alpha;
-    position: fixed;
-    width: 100%;
-    height: 60px;
-    left: 0%;
-    top:0%;
-    padding: 10px;
-
-    nav{
-    display: flex;
-    justify-content: space-between;
-    }
-    .logo{
-    font-size: 25px;
-    font-weight:normal;
-    text-decoration: none;
-    color: whitesmoke;
-    padding-left: 20%;
-    line-height:40px;
-    }
-    .listadoNavegacion{
-    display: flex;
-    padding-right:5%;
-    line-height: 40px;
-    position: relative;
-    }
-    .navegacion{
-    text-decoration: none;
-    color: whitesmoke;
-    font-size:small;
-    letter-spacing: 5px;
-    margin: 10px;
-    text-transform: uppercase;
-    width: max-content; 
-    }          
-    .subMenu{
-    position: absolute;
-    display: none;
-    }
-    .listaSubMenu{
-    display: block;
-    background-color: #404040
-    }
-    .links{
-    text-decoration: none;
-    color: whitesmoke;
-    font-size:small;
-    letter-spacing: 5px;
-    margin: 10px;
-    text-transform: uppercase;
-    width: max-content;
-    animation-duration: 2s;
-    animation-name: aparecer;
-    }
-@keyframes aparecer {
-    0% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 1;
-    }
-}
-}
 
 /*MAIN - PAGINA DE INICIO*/
 main{
         .divPortada{
             background-image: url(../imagenes/splash.gif);
             background-repeat: no-repeat;
-            background-size:cover;
+            background-size: contain;
+            background-color: black;
+            background-position: center;
             margin-top: 50px;
             height: 100vh;
-            .tituloDePortada{
+            display: flex;
+            align-content: stretch;
+            justify-content: center;
+            align-items: center;
+            .frase{
+                display: flex;
                 color:whitesmoke;
                 font-weight: bold;
-                font-size: 32px;
-                text-align: center;
-                padding-top: 60vh;
-                padding-left: 78px;
+                flex-direction: column;
+                align-items: center;
             }
-            .parrafoPortada{
-                color: whitesmoke;
-                text-align: center;
-                font-size: 20px;
-                font-weight: bold;
-                padding-left: 78px;
-                
-            } 
+            
             
         }
 }
 .enfasis{
     color:#ACFDB3 ;
-}  
+} 
+.frase2{
+    background-image: url(/imagenes/arquitectura2.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 480px;
+    padding: 50px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    p{
+        text-align: center;
+        text-align: justify;
+        color: black;
+        font-size: x-large;
+        font-weight: bold;
+
+    }
+
+} 
 .tit{
     display: flex;
     border-bottom: groove 3px #257D59;
@@ -122,7 +76,7 @@ main{
     align-items: center;
     justify-items: center;
     gap: 100px;
-    margin: 0 1%;
+    margin: 0 3%;
     margin-bottom: 50px;
     .cajas{
         row-gap: 3rem;
@@ -141,6 +95,27 @@ main{
     }
    
 }
+.gridClients{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-gap: 30px;
+    padding:30px;
+    figure{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        height: 150px;
+        img{
+            max-width: 100%;
+            max-height: 100%;
+            filter: grayscale(100%);
+            mix-blend-mode: multiply;
+        }
+    }
+
+}
 @media screen and (min-width:$tablet) {
     .padreInicio{
         grid-template-columns: 1fr 1fr;
@@ -151,5 +126,11 @@ main{
         grid-template-columns: 1fr 1fr 1fr 1fr;
     }
 }   
+@media screen and (max-width:375px) {
+    .gridClients{
+        grid-template-columns: 1fr 1fr ;
+        grid-template-rows: 1fr 1fr 1fr;
+    }
+}
 
 
