--- a/styles/global.css
+++ b/styles/global.css
@@ -21,7 +21,7 @@ li {
 
 .content {
   margin-top: 50px;
-  height: 100vh;
+  height: 50vh;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -118,36 +118,148 @@ h2 {
   color: #4CFDB3;
   font-style: italic; }
 
+.info .infoPatentes h2 {
+  animation-duration: 6s;
+  animation-delay: 0.2s; }
+
 @media (min-width: 1024px) {
   header main {
     padding: 0 4rem; } }
 
+/*HEADER*/
+header {
+  background-color: #0D0D0D;
+  list-style-type: lower-alpha;
+  position: fixed;
+  width: 100%;
+  height: 60px;
+  left: 0%;
+  top: 0%;
+  padding: 10px; }
+  header nav {
+    display: flex;
+    justify-content: space-between; }
+  header .logo {
+    font-size: 25px;
+    font-weight: normal;
+    text-decoration: none;
+    color: whitesmoke;
+    padding-left: 20%;
+    line-height: 40px;
+    transition: color .5s; }
+  header .logo:hover {
+    color: #ACFDB3; }
+  header .listadoNavegacion {
+    display: flex;
+    padding-right: 5%;
+    line-height: 40px;
+    position: relative; }
+  header .navegacion {
+    text-decoration: none;
+    color: whitesmoke;
+    font-size: small;
+    letter-spacing: 5px;
+    margin: 10px;
+    text-transform: uppercase;
+    width: max-content;
+    transition: background-color .5s;
+    transition: color .5s; }
+  header li:hover > a {
+    color: #ACFDB3; }
+  header .subMenu {
+    position: absolute;
+    display: none; }
+  header .listaSubMenu {
+    display: block;
+    background-color: #272626; }
+  header .links {
+    text-decoration: none;
+    color: whitesmoke;
+    font-size: small;
+    letter-spacing: 5px;
+    margin: 10px;
+    text-transform: uppercase;
+    width: max-content;
+    animation-duration: 2s;
+    animation-name: aparecer; }
+
+@keyframes aparecer {
+  0% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
+
+@media only screen and (max-width: 700px) {
+  .listadoNavegacion {
+    display: none; } }
+
 footer {
   width: 100%;
+  padding: 50px 0px;
   background-color: #00C976;
-  background-image: linear-gradient(to left, #4CFDB3, #00FC93, #257D59);
-  display: grid;
-  grid-template-columns: 1fr 1fr; }
-  footer div p {
-    color: black;
-    width: max-content;
-    font-size: 18px;
-    font-weight: bold; }
+  background-image: linear-gradient(to left, #00FC93, #257D59); }
 
-.textFooter {
-  display: inline-block;
-  padding: 5px;
+.containerFooter {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  max-width: 1200px;
+  margin: auto; }
+
+.boxFooter {
+  display: flex;
+  flex-direction: column;
+  padding: 40px; }
+
+.logo {
   text-align: center;
-  font-weight: bold;
-  font-size: x-large;
-  border-right: 1px solid black; }
+  font-size: 3em;
+  color: #4cfdb3;
+  width: 353px; }
+  .logo h2 {
+    font-weight: bold;
+    color: #404040;
+    font-style: italic; }
+  .logo img {
+    width: 50%;
+    position: relative; }
 
-.imgFooter {
-  padding: 5px;
-  text-align: center; }
-  .imgFooter img {
-    height: 35px;
-    width: 35px; }
+.terms {
+  max-width: 353px;
+  margin-top: 20px;
+  font-weight: 500;
+  color: #404040;
+  font-size: 18px; }
+  .terms p {
+    color: #404040;
+    font-weight: bold;
+    text-align: justify; }
+
+.boxFooter h2 {
+  margin-bottom: 30px;
+  color: #404040;
+  font-weight: 700; }
+
+.boxFooter a {
+  margin-top: 10px;
+  color: #404040;
+  font-weight: 600; }
+  .boxFooter a .fab {
+    font-size: 20px; }
+
+.boxFooter a:hover {
+  opacity: 0.8; }
+
+.boxCopyRight {
+  max-width: 1200px;
+  margin: auto;
+  text-align: center;
+  padding: 0px 40px;
+  border-top: 1px solid #404040; }
+  .boxCopyRight p {
+    margin-top: 20px;
+    color: #404040;
+    font-weight: bold; }
 
 /*MAIN - PAGINA DE MARCAS*/
 .info {
@@ -243,13 +355,6 @@ footer {
   width: 100%; }
 
 /*---CONTACT US---*/
-.logo {
-  text-align: center;
-  font-size: 3em;
-  color: #4cfdb3;
-  margin-top: 100px;
-  margin-bottom: 100px; }
-
 .formulario1 {
   box-shadow: 0 0 20px 0 rgba(255, 255, 255, 0.3);
   margin-bottom: 100%; }
@@ -318,86 +423,55 @@ button {
     display: block;
     margin: 8px; }
 
+.maps {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin-bottom: 8rem; }
+  .maps h2 {
+    width: fit-content; }
+
 /*MAIN - PAGINA DE MODELOS*/
-/*HEADER*/
-header {
-  background-color: #0D0D0D;
-  list-style-type: lower-alpha;
-  position: fixed;
-  width: 100%;
-  height: 60px;
-  left: 0%;
-  top: 0%;
-  padding: 10px; }
-  header nav {
-    display: flex;
-    justify-content: space-between; }
-  header .logo {
-    font-size: 25px;
-    font-weight: normal;
-    text-decoration: none;
-    color: whitesmoke;
-    padding-left: 20%;
-    line-height: 40px; }
-  header .listadoNavegacion {
-    display: flex;
-    padding-right: 5%;
-    line-height: 40px;
-    position: relative; }
-  header .navegacion {
-    text-decoration: none;
-    color: whitesmoke;
-    font-size: small;
-    letter-spacing: 5px;
-    margin: 10px;
-    text-transform: uppercase;
-    width: max-content; }
-  header .subMenu {
-    position: absolute;
-    display: none; }
-  header .listaSubMenu {
-    display: block;
-    background-color: #404040; }
-  header .links {
-    text-decoration: none;
-    color: whitesmoke;
-    font-size: small;
-    letter-spacing: 5px;
-    margin: 10px;
-    text-transform: uppercase;
-    width: max-content;
-    animation-duration: 2s;
-    animation-name: aparecer; }
-
-@keyframes aparecer {
-  0% {
-    opacity: 0; }
-  100% {
-    opacity: 1; } }
-
 /*MAIN - PAGINA DE INICIO*/
 main .divPortada {
   background-image: url(../imagenes/splash.gif);
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
+  background-color: black;
+  background-position: center;
   margin-top: 50px;
-  height: 100vh; }
-  main .divPortada .tituloDePortada {
+  height: 100vh;
+  display: flex;
+  align-content: stretch;
+  justify-content: center;
+  align-items: center; }
+  main .divPortada .frase {
+    display: flex;
     color: whitesmoke;
     font-weight: bold;
-    font-size: 32px;
-    text-align: center;
-    padding-top: 60vh;
-    padding-left: 78px; }
-  main .divPortada .parrafoPortada {
-    color: whitesmoke;
-    text-align: center;
-    font-size: 20px;
-    font-weight: bold;
-    padding-left: 78px; }
+    flex-direction: column;
+    align-items: center; }
 
 .enfasis {
   color: #ACFDB3; }
+
+.frase2 {
+  background-image: url(/imagenes/arquitectura2.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 480px;
+  padding: 50px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center; }
+  .frase2 p {
+    text-align: center;
+    text-align: justify;
+    color: black;
+    font-size: x-large;
+    font-weight: bold; }
 
 .tit {
   display: flex;
@@ -415,7 +489,7 @@ main .divPortada {
   align-items: center;
   justify-items: center;
   gap: 100px;
-  margin: 0 1%;
+  margin: 0 3%;
   margin-bottom: 50px; }
   .padreInicio .cajas {
     row-gap: 3rem;
@@ -429,6 +503,24 @@ main .divPortada {
       height: 100px;
       width: 100px; }
 
+.gridClients {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  grid-gap: 30px;
+  padding: 30px; }
+  .gridClients figure {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    height: 150px; }
+    .gridClients figure img {
+      max-width: 100%;
+      max-height: 100%;
+      filter: grayscale(100%);
+      mix-blend-mode: multiply; }
+
 @media screen and (min-width: 768px) {
   .padreInicio {
     grid-template-columns: 1fr 1fr; } }
@@ -436,3 +528,8 @@ main .divPortada {
 @media screen and (min-width: 1024px) {
   .padreInicio {
     grid-template-columns: 1fr 1fr 1fr 1fr; } }
+
+@media screen and (max-width: 375px) {
+  .gridClients {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr; } }
