--- a/scss/_marcas.scss
+++ b/scss/_marcas.scss
@@ -12,23 +12,27 @@
         padding: 1rem;
         border-top: dotted 5px #4CFDB3;
         border-right: dotted 5px #4CFDB3;
+        height: 100%;
     }
     .registro{
         grid-area: 2/2;
         padding: 1rem;
         border-top: dotted 5px #4CFDB3;
         border-left: dotted 5px #4CFDB3;
+        height: 100%;
     }
     .derechos{
         grid-area: 3/1;
         padding: 1rem;
         border-top: dotted 5px #4CFDB3;
         border-right: dotted 5px #4CFDB3;
+        height: 100%;
     }
     .asesoramiento{
         grid-area: 4/2;
         padding: 1rem;
         border-top: dotted 5px #4CFDB3;
+        height: 100%;
         ul{
             li{
                 display: block;
