--- a/scss/_contactus.scss
+++ b/scss/_contactus.scss
@@ -6,7 +6,7 @@ $laptop:1024px;
   
 .formulario1 {
     box-shadow: 0 0 20px 0 rgba(255, 255, 255, 0.3);
-    margin-bottom: 100% }
+}
  
 @media (min-width: $tablet){
         .formulario1{
