--- a/scss/_marcas.scss
+++ b/scss/_marcas.scss
@@ -1,5 +1,25 @@
-/*MAIN - PAGINA DE MARCAS*/
+/* PAGINA DE MARCAS*/
 
+.frase3{
+    background-image: url(/imagenes/rasgado.jpg);
+    background-repeat: round;
+    background-size: cover;
+    width: 100%;
+    height: 401px;
+    padding: 50px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    p{
+        text-align: center;
+        color: black;
+        font-size: x-large;
+        font-weight: bold;
+
+    }
+
+} 
 .info{
     display: grid;
     grid-template-columns: 1fr 1fr;
