--- a/scss/_patentes.scss
+++ b/scss/_patentes.scss
@@ -1,4 +1,23 @@
+/* PAGINA DE PATENTES*/
 
+.frase5{
+    background-image: url(/imagenes/TitlePage.png);
+    background-size: cover;
+    width: 100%;
+    height: 401px;
+    padding: 50px;
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    justify-content: flex-end;
+    p{
+        text-align: center;
+        color: #4CFDB3;
+        font-size: x-large;
+
+    }
+
+} 
 .infoPatentes{
     display: grid;
     grid-template-columns: 1fr 1fr;
