--- a/styles/global.css
+++ b/styles/global.css
@@ -392,7 +392,7 @@ footer {
 
 /* PAGINA DE PATENTES*/
 .frase5 {
-  background-image: url(imagenes/TitlePage.png);
+  background-image: url(../imagenes/TitlePage.png);
   background-size: cover;
   width: 100%;
   height: 401px;
@@ -552,7 +552,7 @@ button {
 
 /*PAGINA DE MODELOS*/
 .frase4 {
-  background-image: url(imagenes/divisor.png);
+  background-image: url(../imagenes/divisor.png);
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
